<resources>
    <string name="app_name">Chama Ae!</string>

    <!--> CHAVE FACEBOOK <-->
    <string name="facebook_app_id">421364351575261</string>
    <string name="fb_login_protocol_scheme">fb421364351575261</string>

    <!--> MENSAGENS <-->
    <string name="MsgSenhaErrada">AS SENHAS NAO CONFEREM !</string>
    <string name="MsgDadosLogin">INFORME OS DADOS DO SEU LOGIN !</string>
    <string name="MsgFazendoLogin">FAZENDO LOGIN AGUARDE …</string>
    <string name="MsgGravaDados">GRAVANDO INFORMAÇÕES AGUARDE …</string>
    <string name="MsgCarregandoDados">CARREGANDO DADOS AGUARDE …</string>
    <string name="MsgInformaDados">INFORME OS DADOS !</string>
    <string name="MsgRegistroGravado">REGISTRO GRAVADO COM SUCESSO !</string>

    <!--> TELA DE SERVIÇOS <-->
    <string name="CfgConta">Conta</string>
    <string name="Compart">Compartilhar</string>
    <string name="Historico">Historico</string>
    <string name="Warnning">Denúncias</string>
    <string name="Serviços">Anúncios</string>
    <string name="Inserir">Inserir</string>

    <string name="Pestador">Prestador</string>
    <string name="Contratante">Contratante</string>


    <!--> TELA DE INICIO <-->
    <string name="BtnLogin">LOGIN</string>
    <string name="BtnCadastro">CADASTRA-SE</string>
    <string name="EdtLogin">USUARIO / E-MAIL</string>
    <string name="EdtSenha">SENHA</string>

    <!--> TELA CONFIG CONTA<-->
    <string name="TxtGerais">GERAIS</string>
    <string name="TxtDadosPrest">DADOS</string>
    <string name="TxtEndereço">ENDEREÇO</string>


    <!--> TELA CADASTRO <-->
    <string name="TxtNome">NOME :</string>
    <string name="TxtTelefone">TELEFONE :</string>
    <string name="TxtSobreNome">SOBRE NOME :</string>
    <string name="TxtSenha">SENHA :</string>
    <string name="TxtSConfenha">CONFIRME SUA SENHA :</string>
    <string name="TxtEmail">EMAIL :</string>
    <string name="TxtCPFCNPJ">CPF / CNPJ</string>
    <string name="BtnProx">PROXIMO -></string>

    <!--> TELA DE END <-->
    <string name="TxtBuscaEnd">BUSCA ENDEREÇO PELA SUA LOCALIZAÇÃO</string>
    <string name="BtnBuscaEnd">BUSCAR!</string>
    <string name="BtnBuscaCEP">BUSCAR CEP</string>
    <string name="HintEdtCEP">CEP</string>
    <string name="HintEdtBairro">BAIRRO</string>
    <string name="HintEdtCidade">CIDADE</string>
    <string name="HintEdtRua">RUA</string>
    <string name="HintEdtNRO">NRO. CASA</string>
    <string name="BtnSalvar">SALVAR</string>
    <string name="HintEdtComp">COMPLEMENTO</string>
    <string name="EdtSenha2">SENHA</string>
    <string name="title_activity_servicos">Serviços</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


</resources>
