<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_servicos"
            android:icon="@drawable/ic_servicos"
            android:title="@string/Serviços" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/Compart" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_historico"
            android:icon="@drawable/ic_historico"
            android:title="@string/Historico" />
        <item
            android:id="@+id/nav_cfgConta"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/CfgConta" />
    </group>

    <group android:checkableBehavior="single">
        <item
           android:id="@+id/nav_warning"
           android:icon="@drawable/ic_warning"
           android:title="@string/Warnning" />
    </group>

</menu>
