<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_inf_pessoais"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="chamaae.com.br.ActivityInfPessoais">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:gravity="center"
        android:background="@drawable/edtcircular"
        android:id="@+id/EdtNome"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/EdtEmail"
        android:background="@drawable/edtcircular"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:gravity="center"
        android:ems="10"
        android:id="@+id/EdtTel"
        android:background="@drawable/edtcircular"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/TxtTelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:textColor="?attr/actionModeSplitBackground"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/EdtEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/TxtNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:textColor="?attr/actionModeSplitBackground"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:text="@string/TxtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:textColor="?attr/actionModeSplitBackground"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/EdtNome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/EdtSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:inputType="textPassword"
        android:background="@drawable/edtcircular"
        android:gravity="center"
        android:layout_alignTop="@+id/TxtSenha"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/TxtSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TxtSenha"
        android:textSize="18sp"
        android:layout_below="@+id/EdtTel"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="28dp" />

    <Button
        android:id="@+id/BtnSalvarCli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:text="@string/BtnSalvar"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/TxtSenha"
        android:layout_alignStart="@+id/TxtSenha"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/EdtConfimaSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:background="@drawable/edtcircular"
        android:gravity="center"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/EdtSenha"
        android:layout_alignStart="@+id/EdtSenha" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="CONFIRME A SENHA :"
        android:textSize="18sp"
        android:layout_below="@+id/EdtSenha"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
